@@ -51,6 +51,11 @@ Changes from 4.3.x -> 4.4-alpha
 * xymond_client can send follow-up "modify" messages showing matching
   log lines in the 'msgs' column, allowing color to potentially be
   persisted independently of LOGFETCH_SCROLLBACK or client frequency.
+* xymonproxy now can send one-way messages via the local BFQ when given 
+  the --bfq option. By default it will combine messages as well, unless
+  given --no-extcombine. In this mode, only two-way messages will be
+  forwarded to the server over TCP, so it only makes sense to have a
+  single one listed.
 
 * FIXME-doc: Add --no-cookies and --no-save-cookies (read but don't 
   write) to xymonnet
